--- a/QLGV_DTSoft/Views/NguoiDungs/Edit2.cshtml
+++ b/QLGV_DTSoft/Views/NguoiDungs/Edit2.cshtml
@@ -69,12 +69,12 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Ngaybatdaulam" class="control-label"></label>
+                <label asp-for="Ngaybatdaulam" class="control-label">Ngày bắt đầu làm</label>
                 <input asp-for="Ngaybatdaulam" class="form-control" disabled />
                 <span asp-validation-for="Ngaybatdaulam" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Thamnien" class="control-label"></label>
+                <label asp-for="Thamnien" class="control-label">Thăm niên</label>
                 <input asp-for="Thamnien" class="form-control" disabled />
                 <span asp-validation-for="Thamnien" class="text-danger"></span>
             </div>
