--- a/QLGV_DTSoft/Views/Auth/Login.cshtml
+++ b/QLGV_DTSoft/Views/Auth/Login.cshtml
@@ -22,17 +22,18 @@
                                         <h2 class="mb-2 text-white">Đăng nhập</h2>
                                         @Html.HiddenFor(x => x.ReturnUrl)
                                         <form method="post">
+                                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                             <div class="row">
                                                 <div class="col-lg-12">
                                                     <div class="floating-label form-group">
                                                         <input class="floating-input form-control"  asp-for="Tennguoidung" placeholder="Nhập tên người dùng">
-                                                        
+                                                        <span asp-validation-for="Tennguoidung" class="text-danger"></span>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-12">
                                                     <div class="floating-label form-group">
                                                         <input class="floating-input form-control" asp-for="Matkhau" type="password" placeholder="Nhập mật khẩu">
-                                                        
+                                                        <span asp-validation-for="Tennguoidung" class="text-danger"></span>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6">
