--- a/QLGV_DTSoft/Views/Shared/_Topbar.cshtml
+++ b/QLGV_DTSoft/Views/Shared/_Topbar.cshtml
@@ -200,7 +200,7 @@
                         <li class="nav-item nav-icon dropdown caption-content">
                             <a href="#" class="search-toggle dropdown-toggle  d-flex align-items-center" id="dropdownMenuButton4"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <img src="../assets/images/user/1.jpg" class="img-fluid rounded-circle" alt="user">
+                               @* <img src="../assets/images/user/1.jpg" class="img-fluid rounded-circle" alt="user">*@
                                 <div class="caption ml-3">
                                     <h6 class="mb-0 line-height"> Xin chào @username!<i class="las la-angle-down ml-2"></i></h6>
                                 </div>
