--- a/QLGV_DTSoft/Views/Userprofile/EditProfile.cshtml
+++ b/QLGV_DTSoft/Views/Userprofile/EditProfile.cshtml
@@ -34,7 +34,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Tennguoidung" class="control-label">Tên đăng nhập</label>
-                <input asp-for="Tennguoidung" class="form-control" />
+                <input asp-for="Tennguoidung" class="form-control"  disabled/>
                 <span asp-validation-for="Tennguoidung" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Matkhau" />
